# logscanner-exercise

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/logscanner/: analyzer.py  cli.py  parser.py
tests/: test_analyzer.py  test_cli.py  test_parser.py
