[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logscanner-exercise"
version = "1.0.0"
description = "Command-line tool to analyze the content of log files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
logscanner = "logscanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "bandit>=1.7.8"
]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["S101", "D100", "D103", "D104"]


[tool.ruff.lint]
select = ["E", "F", "I", "S", "D"]
ignore = []

[tool.bandit]
exclude_dirs = ["tests"]
